@@ -1,5 +1,5 @@
 <!-- Creator     : groff version 1.23.0 -->
-<!-- CreationDate: Sat Jan 20 15:46:05 2024 -->
+<!-- CreationDate: Fri Jan 26 11:06:51 2024 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -60,10 +60,16 @@ Cherry and Nina Macdonald of Bell Labs. This isn&rsquo;t a
 clone since I&rsquo;ve never used or even seen the
 original.</p>
 
+<p style="margin-left:9%; margin-top: 1em">I have since
+read the UNIX System WRITER&rsquo;S WORKBENCH Software User
+Guide, and implemented changes in an attempted to more
+closely match the original interface. I have not seen any of
+the AT&amp;T code.</p>
+
 <p style="margin-top: 1em"><b>AUTHORS</b></p>
 
 <p style="margin-left:9%;">Jon Higgs &lt;jon@altos.au&gt;
-GNU 2024-01-20 <i>org</i>(1)</p>
+GNU 2024-01-26 <i>org</i>(1)</p>
 <hr>
 </body>
 </html>
