@@ -11,9 +11,11 @@
 .Sh DESCRIPTION
 The
 .Nm org
-prints each paragraphs first and last sentences, showing how ideas flow from one paragraph to the next.
+prints each paragraph's first and last sentences, showing how ideas flow from one paragraph to the next.
 .Pp
 Lines can be either hard or soft wrapped, but paragraphs must be separated with an empty line and sentences with a period.
+.Pp
+Lists are omitted from the output.
 .Pp
 If no \fI\,FILES\/\fR are supplied, input is read from standard in.
 .Sh HISTORY
@@ -22,5 +24,7 @@ This tool was inspired by the line:
 .Pq "UNIX Text Processing, by Dale Dougherty and Tim O'Reilly"
 .Pp
 It originated under the same name in Writers WorkBench (wwb) by Lorinda Cherry and Nina Macdonald of Bell Labs. This isn't a clone since I've never used or even seen the original.
+.Pp
+I have since read the UNIX System WRITER'S WORKBENCH Software User Guide, and implemented changes to more closely match the original interface. I have not seen any of the AT&T code.
 .Sh AUTHORS
 .An "Jon Higgs" Aq "jon@altos.au"
