@@ -4,6 +4,7 @@ CHANGELOG
 Unreleased
 ------------------------------------------
 - Improve error handling
+- Ignore lists
 
 
 org   v0.1.0                   2024-01-20
